2011-05-12  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a function to give the address of
	one agent

2011-05-12  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Change apply policy option in CLI to
	add application to queue

2011-05-11  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/Core.pm
	bin/pandora_server
	util/pandora_manage.pl: Added thread in main loop of the 
	server with check to the policy queue. 
	Apply and delete agents from policy in the new thread
	Deleting policies lock system from server 

2011-05-09  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm
	lib/PandoraFMS/Core.pm
	util/pandora_manage.pl: Moved some functions from CLI to common
	files

2011-05-07 Sancho Lerena <slerena@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Ported changes from 3.2 on Recon.
	Full topology recursive discovery and resolution, os_type conditional.

2011-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	* operation/search_agents.php: changed the SQL query for PostgreSQL.
	
	* godmode/agentes/configurar_agente.php: cleaned source code style.

2011-05-05 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixed the include the new
	graph engine in the ajax calls.

2011-05-04 Miguel de Dios  <miguel.dedios@artica.es>

	* util/pandora_xml_stress.pl: changed the source code to generate local conf
	for each agent. And in next executions you can change in remote conf in
	Pandora Console Enteprise as real agent.
	
	* util/pandora_xml_stress.README: added confs for the generate local conf.

2011-05-04  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added standby field to be propagated
	in apply policy option

2011-05-03  Sergio Martin <sergio.martin@artica.es>

	* util/pandora_manage.pl: Added option to disable all the
	alerts of one policy. 
	Updated apply_policy option to use disabled flag